--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.0.0
   cloud_firestore: ^5.0.0
   firebase_ui_auth: ^1.14.0
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_test:
