--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   cloud_firestore: ^5.0.0
   firebase_ui_auth: ^1.14.0
   video_player: ^2.10.0
+  url_launcher: ^6.3.1
+  flutter_svg: ^2.0.10
+  crypto: ^3.0.3
+  flutter_local_notifications: ^17.2.3
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
