--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "truebalanceclient",
-    "short_name": "truebalanceclient",
+    "name": "TrueBalance Pain Relief",
+    "short_name": "TrueBalance",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#6A1B9A",
+    "theme_color": "#6A1B9A",
+    "description": "TrueBalance Pain Relief Client App",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
