--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   firebase_auth: ^5.0.0
   cloud_firestore: ^5.0.0
   firebase_ui_auth: ^1.14.0
-  video_player: ^2.10.0
+  video_player: ^2.7.0
+  wakelock_plus: 1.0.0
   url_launcher: ^6.3.1
   flutter_svg: ^2.0.10
   crypto: ^3.0.3
