--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   crypto: ^3.0.3
   flutter_local_notifications: ^17.2.3
   shared_preferences: ^2.3.2
+  workmanager: ^0.9.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
